# media-mcp-server

./: README.md  pyproject.toml  server.py
src/media_mcp_server/: __init__.py  server.py
