[project]
name = "media-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cloudinary>=1.43.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/rocksun/media-mcp-server"
Repository = "https://github.com/rocksun/media-mcp-server"
"Bug Tracker" = "https://github.com/rocksun/media-mcp-server/issues"

[[project.authors]]
name = "Rock Sun"
email = "daijun@gmail.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
media-mcp-server = "media_mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/media_mcp_server"]
